# cargo-publish-workspace

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  order_crates.rs  publish.rs  result.rs  utils.rs
