[package]
authors = ["mwrites <mwrites@pub.me>"]
categories = ["development-tools", "development-tools::cargo-plugins"]
description = "Cargo command to publish a workspace mono repo"
documentation = "https://github.com/mwrites/cargo-publish-workspace/blob/master/README.md"
homepage = "https://github.com/mwrites/cargo-publish-workspace"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "crates",
    "publish",
]
license = "Apache-2.0 OR MIT"
name = "cargo-publish-workspace-v2"
readme = "README.md"
repository = "https://github.com/mwrites/cargo-publish-workspace"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cargo-publish-workspace"
path = "src/bin/main.rs"

[lib]
name = "cargo_publish_workspace"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.4", features = ["derive", "wrap_help"] }
indexmap = "1.7"
serde_json = "1.0.95"
termcolor = "1.2.0"
